--- a/apps/billing/project.json
+++ b/apps/billing/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-expressgateway-kafka-nx",
+  "name": "billing",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/node-expressgateway-kafka-nx/src",
+  "sourceRoot": "apps/billing/src",
   "projectType": "application",
   "tags": [],
   "targets": {
@@ -9,14 +9,14 @@
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "node-expressgateway-kafka-nx:build"
+        "buildTarget": "billing:build"
       },
       "configurations": {
         "development": {
-          "buildTarget": "node-expressgateway-kafka-nx:build:development"
+          "buildTarget": "billing:build:development"
         },
         "production": {
-          "buildTarget": "node-expressgateway-kafka-nx:build:production"
+          "buildTarget": "billing:build:production"
         }
       }
     }
