--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "concurrently 'npm:start:*'",
     "start:api-gateway": "nx serve api-gateway",
     "start:billing": "nx serve billing",
     "start:users": "nx serve users",
     "start:logs": "nx serve logs",
+    "build": "concurrently 'npm:build:*'",
     "build:api-gateway": "nx build api-gateway",
     "build:billing": "nx build billing",
     "build:users": "nx build users",
@@ -20,6 +22,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "concurrently": "^8.2.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.3.4",
     "reflect-metadata": "^0.1.13",
